# minecraft-server-discord-status

./: Dockerfile  README.md  flake.nix  pyproject.toml
.github/workflows/: ci.yml
minecraft_server_discord_status/: __init__.py  __main__.py
